--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,7 @@
                 "functions": "ignore"
             }
         ],
+        "no-trailing-spaces": 1,
         "no-unused-vars": [
             1,
             {
@@ -42,10 +43,18 @@
             }
 
         ],
+        "no-nested-ternary": 0,
         "react/jsx-filename-extension": 0,
         "react/jsx-indent": [1, 4],
         "react/jsx-indent-props": [1, 4],
-        "react/no-did-mount-set-state": 0
+        "react/no-did-mount-set-state": 0,
+        "jsx-a11y/anchor-is-valid": [
+            "error",
+            {
+                "components": ["Link"],
+                "specialLink": ["to"]
+            }
+        ]
     },
     "plugins": [
         "html",
