Eslint change jsx-a11y/label-has-for
Change so that every input does not need to be nested inside a label.
This is to allow checkboxes to have the label after the input.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -54,7 +54,12 @@
                 "components": ["Link"],
                 "specialLink": ["to"]
             }
-        ]
+        ],
+        "jsx-a11y/label-has-for": [2, {
+            "required": {
+                "every": ["id"]
+            }
+        }]
     },
     "plugins": [
         "html",
