--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coffeecounter",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Coffee Counter app for React.js Essential Training",
   "main": "index.js",
   "scripts": {
@@ -45,5 +45,9 @@
   },
   "eslintIgnore": [
     "dist/assets/bundle.js"
-  ]
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Neil188/Coffee-Counter.git"
+  }
 }
