--- a/package.json
+++ b/package.json
@@ -11,37 +11,38 @@
   "author": "N Lupton",
   "license": "MIT",
   "dependencies": {
-    "autoprefixer": "^8.0.0",
-    "prop-types": "^15.6.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "autoprefixer": "^8.6.0",
+    "hoek": "^4.2.1",
+    "prop-types": "^15.6.1",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
     "react-icons": "^2.2.7",
     "react-router-dom": "^4.2.2",
     "shortid": "^2.2.8"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.2",
-    "babel-loader": "^7.1.3",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
+    "babel-loader": "^7.1.4",
     "babel-plugin-react": "^1.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.10",
-    "eslint": "^4.18.1",
+    "css-loader": "^0.28.11",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-html": "^4.0.2",
-    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-html": "^4.0.3",
+    "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-react": "^7.7.0",
-    "node-sass": "^4.7.2",
-    "postcss-loader": "^2.1.1",
-    "prettier": "^1.10.2",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.20.2",
-    "webpack": "^3.10.0",
+    "eslint-plugin-react": "^7.9.1",
+    "node-sass": "^4.9.0",
+    "postcss-loader": "^2.1.5",
+    "prettier": "^1.13.4",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.21.0",
+    "webpack": "^3.12.0",
     "webpack-dev-server": "^2.11.2"
   },
   "eslintIgnore": [
