--- a/package.json
+++ b/package.json
@@ -4,46 +4,47 @@
     "description": "Coffee Counter app for React.js Essential Training",
     "main": "index.js",
     "scripts": {
-        "build": "webpack",
+        "build:dev": "webpack",
+        "build:prod": "webpack -p --env production",
         "serve": "npx serve -s dist",
         "dev-server": "webpack-dev-server"
     },
     "author": "N Lupton",
     "license": "MIT",
     "dependencies": {
-        "autoprefixer": "^8.6.5",
-        "hoek": "^4.2.1",
+        "autoprefixer": "^9.4.4",
         "prop-types": "^15.6.2",
-        "react": "^16.5.2",
-        "react-dom": "^16.4.0",
+        "react": "^16.7.0",
+        "react-dom": "^16.7.0",
         "react-icons": "^2.2.7",
         "react-router-dom": "^4.3.1",
-        "shortid": "^2.2.13"
+        "shortid": "^2.2.14"
     },
     "devDependencies": {
         "babel-core": "^6.26.3",
-        "babel-eslint": "^8.2.6",
+        "babel-eslint": "^10.0.1",
         "babel-loader": "^7.1.5",
         "babel-plugin-react": "^1.0.0",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-preset-env": "^1.7.0",
         "babel-preset-react": "^6.24.1",
-        "css-loader": "^0.28.11",
-        "eslint": "^4.19.1",
-        "eslint-config-airbnb": "^16.1.0",
-        "eslint-config-prettier": "^2.10.0",
-        "eslint-plugin-html": "^4.0.3",
+        "css-loader": "^2.1.0",
+        "eslint": "^5.12.0",
+        "eslint-config-airbnb": "^17.1.0",
+        "eslint-config-prettier": "^3.3.0",
+        "eslint-plugin-html": "^5.0.0",
         "eslint-plugin-import": "^2.14.0",
         "eslint-plugin-jsx-a11y": "^6.1.2",
-        "eslint-plugin-prettier": "^3.0.0",
-        "eslint-plugin-react": "^7.11.1",
-        "node-sass": "^4.9.3",
-        "postcss-loader": "^2.1.6",
-        "prettier": "^1.14.3",
-        "sass-loader": "^6.0.7",
+        "eslint-plugin-prettier": "^3.0.1",
+        "eslint-plugin-react": "^7.12.3",
+        "node-sass": "^4.11.0",
+        "postcss-loader": "^3.0.0",
+        "prettier": "^1.15.3",
+        "sass-loader": "^7.1.0",
         "style-loader": "^0.23.1",
-        "webpack": "^3.12.0",
-        "webpack-dev-server": "^2.11.3"
+        "webpack": "^4.28.3",
+        "webpack-cli": "^3.2.0",
+        "webpack-dev-server": "^3.1.14"
     },
     "eslintIgnore": [
         "dist/assets/bundle.js"
